syntax = "proto3";
package kanthor.controlplane.v1;
option go_package = "github.com/scrapnode/kanthor/controlplane/server/grpc/protos";

import "entities.proto";

message IAccount {
  string sub = 1;
  string name = 2;
  string picture = 3;
  string email = 4;
  string phone_number = 5;
}

service Account {
  rpc Get(AccountGetReq) returns (IAccount) {}
  rpc ListWorkspaces(AccountListWorkspacesReq) returns (AccountListWorkspacesRes) {}
}

message AccountGetReq {}

message AccountListWorkspacesReq {}

message AccountListWorkspacesRes {
  repeated IWorkspace data = 1;
}